// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-jBOHFZ {
    animation-name: k-gJNjLs;
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    background-color: currentColor;
    border-radius: var(--radii-round);
  }

  .c-jBOHFZ:nth-child(1) {
    animation-delay: -300ms;
  }

  .c-jBOHFZ:nth-child(2) {
    animation-delay: -150ms;
  }

  .c-jBOHFZ:nth-child(3) {
    animation-delay: 0;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-dbrbZt-hemXWm-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 2;
  }

  .c-fkUJsw-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }

  .c-fkUJsw-DdIlq-isLoading-true {
    cursor: not-allowed;
    opacity: 0.6;
    pointer-events: none;
  }

  .c-jBOHFZ-jIYkAt-size-md {
    height: 6px;
    width: 6px;
    margin-left: 2px;
    margin-right: 2px;
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):hover,
  .c-fkUJsw-skNNT-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

@media  {
  .c-dbrbZt-idQfaGE-css {
    margin-left: var(--space-3);
    height: 20px;
    width: 20px;
  }

  .c-dhzjXW-ihMdMjL-css {
    justify-content: center;
    opacity: 1;
    position: absolute;
    transition: opacity 150ms;
  }

  .c-PJLV-ikHJJOk-css {
    opacity: 0;
    transition: opacity 150ms;
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-DdIlq-isLoading-true c-fkUJsw-gsycxF-cv"
    type="button"
  >
    <div
      class="c-dhzjXW c-dhzjXW-ihMdMjL-css"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
    </div>
    <span
      class="c-PJLV c-PJLV-ikHJJOk-css"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-dbrbZt-hemXWm-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 2;
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):hover,
  .c-fkUJsw-skNNT-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

@media  {
  .c-dbrbZt-idQfaGE-css {
    margin-left: var(--space-3);
    height: 20px;
    width: 20px;
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-idQfaGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled warning outline button 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-fSssiS-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button with secondary theme 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):hover,
  .c-fkUJsw-skNNT-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-skNNT-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-dbrbZt-hemXWm-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 2;
  }

  .c-fkUJsw-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }
}

@media  {
  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-skNNT-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):hover,
  .c-fkUJsw-skNNT-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-fkUJsw-skNNT-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

@media  {
  .c-dbrbZt-idQfaGE-css {
    margin-left: var(--space-3);
    height: 20px;
    width: 20px;
  }
}

<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-rloUt-isRounded-true c-fkUJsw-gsycxF-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-idQfaGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
